--- a/backend/package.json
+++ b/backend/package.json
@@ -11,8 +11,12 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.3.0",
+    "mysql2": "^3.4.0",
+    "sequelize": "^6.32.1",
     "validator": "^13.9.0"
   },
   "type": "module"
