--- a/backend/package.json
+++ b/backend/package.json
@@ -16,9 +16,11 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.3.0",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.4.0",
     "sequelize": "^6.32.1",
     "slug": "^8.2.3",
+    "uuidv4": "^6.2.13",
     "validator": "^13.9.0"
   },
   "type": "module"
